# konam-pdf

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/konam/pdf/: MainActivity.kt
app/src/main/python/: pdf_processor.py
app/src/main/res/drawable/: images.txt
app/src/main/res/layout/: activiy_main.xml
app/src/main/res/midmap-mdpi/: ic-launcher.txt
app/src/main/res/values/: strings.xml  themes.xml
docs/: design.md
native/: CMakeLists.txt
native/src/: konam_wrapper.c
python/konam_pdf/: _init_.py  bridge.py  mupdf_wrapper.py
scripts/: build_native.sh  package_python_assets.sh
